# countly-sdk-cpp

./: CMakeLists.txt  vcpkg-install-dependencies.bat
include/: countly.hpp
src/: countly.cpp
